--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="toast"></div>
         <div class="nav">
             <ul class="nav-list">
-                <li><a href="https://landingpage-advanced.web.app/" target="_blank">HOME</a></li>
+                <li><a href="#home">HOME</a></li>
                 <li><a href="#about">ABOUT</a></li>
                 <li><a href="#social">SOCIAL</a></li>
                 <li>
@@ -117,8 +117,9 @@
                     </a>
                     <h3>My Facebook</h3>
                     <p>
-                        Facebook, Inc. là một công ty truyền thông xã hội và công nghệ Mỹ có trụ sở tại Menlo Park,
-                        California
+                        Facebook is an American online social media and social networking service owned by Facebook, Inc.
+                        Founded in 2004 by Mark Zuckerberg with fellow Harvard College students and roommates Eduardo Saverin,
+                        Andrew McCollum, Dustin Moskovitz, and Chris Hughes.
                     </p>
                 </div>
                 <div class="social-box">
@@ -127,8 +128,9 @@
                     </a>
                     <h3>My Instagram</h3>
                     <p>
-                        Instagram là một dịch vụ mạng xã hội chia sẻ hình ảnh và video của Mỹ được tạo ra bởi Kevin
-                        Systrom và Mike Krieger.
+                        Instagram (commonly abbreviated to IG, Insta or the gram) is an American photo and video sharing 
+                        social networking service created by Kevin Systrom and Mike Krieger. 
+                        In April 2012, Facebook acquired the service for approximately US$1 billion in cash and stock. 
                     </p>
                 </div>
                 <div class="social-box">
@@ -137,8 +139,9 @@
                     </a>
                     <h3>My Github</h3>
                     <p>
-                        GitHub là một dịch vụ cung cấp kho lưu trữ mã nguồn Git dựa trên nền web cho các dự án phát
-                        triển phần mềm.
+                        GitHub, Inc. is a provider of Internet hosting for software development and version control using Git. 
+                        It offers the distributed version control and source code management (SCM) functionality of Git, plus its own features.
+                        Headquartered in California, it has been a subsidiary of Microsoft since 2018.
                     </p>
                 </div>
                 <div class="social-box">
@@ -147,8 +150,9 @@
                     </a>
                     <h3>My Linkedin</h3>
                     <p>
-                        LinkedIn là một trang mạng định hướng kinh doanh, có trụ sở tại Mountain View, bang
-                        California.
+                        linkedIn is an American business and employment-oriented online service that operates via websites and mobile apps. 
+                        Launched on May 5, 2003, the platform is mainly used for professional networking, and allows job seekers to post their 
+                        CVs and employers to post jobs.
                     </p>
                 </div>
             </div>
