--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LandingPageAdvanced</title>
+    <link rel="icon" href="assets/img/favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
-        integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="/sass/style.css">
+    <link rel="stylesheet" href="/assets/sass/style.css">
 
 </head>
 
@@ -23,21 +23,24 @@
             <ul class="nav-list">
                 <li><a href="#home">HOME</a></li>
                 <li><a href="#about">ABOUT</a></li>
-                <li><a href="#social">SOCIAL</a></li>
                 <li>
                     <a>MORE&nbsp;&nbsp;<i class="fas fa-angle-right"></i></a>
                     <ul class="subnav">
+                        <li><a href="#social">SOCIAL</a></li>
                         <li><a href="#feature">FEATURE</a></li>
-                        <li><a href="#content">CONTENT</a></li>
                         <li><a href="#contact">CONTACT</a></li>
                     </ul>
                 </li>
             </ul>
             <ul class="nav-list">
                 <li>
-                    <a onclick="showErrorToast();" href="#home"><i class="search-fast fas fa-search"></i>&nbsp;&nbsp;SEARCH</a>
+                    <a onclick="showErrorToast();" href="#home">
+                        <i class="search-fast fas fa-search"></i>
+                    </a>
                 </li>
-                <li><a onclick="showErrorToast();" href="#contact">SIGN IN</a></li>
+                <li><a onclick="showErrorToast();" href="#home"><i class="far fa-bell"></i></a></li>
+                <li><a onclick="showErrorToast();" href="#contact">LOGIN</a></li>
+                <li><a onclick="showErrorToast();" href="#contact">REGISTER</a></li>
             </ul>
         </div>
         <header class="header">
@@ -76,18 +79,18 @@
                         <br>League of Legends, PES, travel, G-Dragon
                     </p>
                     <div class="align-title-small">
-                        <div onclick="showThanksToast();" class="btn btn--success btn--size-s">Like 
+                        <div onclick="showThanksToast();" class="btn btn--success btn--size-s">Like
                             <i class="far fa-thumbs-up"></i>
                         </div>
-                        <div onclick="showSorryToast();" class="btn btn--deny btn--size-s">Dislike 
+                        <div onclick="showSorryToast();" class="btn btn--deny btn--size-s">Dislike
                             <i class="far fa-thumbs-down"></i>
                         </div>
                     </div>
                 </div>
                 <div class="content-right">
-                    <img src="img/minipic1.jpg" alt="photo1" class="content-right__photo content-right__photo--p1">
-                    <img src="img/minipic2.jpg" alt="photo2" class="content-right__photo content-right__photo--p2">
-                    <img src="img/minipic3.jpg" alt="photo3" class="content-right__photo content-right__photo--p3">
+                    <img src="/assets/img/minipic1.jpg" alt="photo1" class="content-right__photo content-right__photo--p1">
+                    <img src="/assets/img/minipic2.jpg" alt="photo2" class="content-right__photo content-right__photo--p2">
+                    <img src="/assets/img/minipic3.jpg" alt="photo3" class="content-right__photo content-right__photo--p3">
                 </div>
             </div>
         </section>
@@ -268,124 +271,9 @@
             </div>
         </section>
 
-        <section id="content" class="section-content">
-            <div class="align-title-small">
-                <h2 class="heading-secondary">
-                    content
-                </h2>
-            </div>
-            <div class="layout-ctn">
-                <div class="column-item sidebar-one">
-                    <h2>Sidebar one</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
-                        cupiditate
-                        eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis minima
-                        soluta
-                        neque est beatae? Nobis.
-                    </p>
-                </div>
-                <div class="column-item main-column">
-                    <h2>Main column</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
-                        cupiditate
-                        eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis minima
-                        soluta
-                        neque est beatae? Nobis.Lorem ipsum dolor sit amet consectetur adipisicing elit.Lorem
-                        ipsum dolor sit amet.
-                    </p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
-                    cupiditate
-                    eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis minima soluta
-                    neque est beatae? Nobis.Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    </p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
-                        cupiditate
-                        eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis minima
-                        soluta
-                        neque est beatae? Nobis.Lorem ipsum dolor sit amet consectetur adipisicing elit.Lorem
-                        ipsum dolor sit amet consectetur.
-                    </p>
-                </div>
-                <div class="column-item sidebar-two">
-                    <h2>Sidebar two</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
-                        cupiditate
-                        eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis minima
-                        soluta
-                        neque est beatae? Nobis.Nobis.Lorem ipsum dolor sit amet consectetur adipisicing.
-                    </p>
-                </div>
-            </div>
-
-            <div id="chart" class="chart">
-                <div class="chart-ctn">
-                    <div class="chart-layout">
-                        <div class="chart-layout__item" style="--percent: 10%">10%</div>
-                        <div class="chart-layout__item" style="--percent: 20%">20%</div>
-                        <div class="chart-layout__item" style="--percent: 40%">40%</div>
-                        <div class="chart-layout__item" style="--percent: 90%">90%</div>
-                        <div class="chart-layout__item" style="--percent: 80%">80%</div>
-                        <div class="chart-layout__item" style="--percent: 40%">40%</div>
-                    </div>
-                </div>
-            </div>
-
-            <div id="end" class="end">
-                <div class="end-ctn">
-                    <div class="the-end__first">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
-                            cupiditate
-                            eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis minima
-                            soluta
-                            neque est beatae? Nobis.Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Lorem ipsum dolor sit amet.
-                        </p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
-                        cupiditate
-                        eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis minima soluta
-                        neque est beatae? Nobis.Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        </p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
-                            cupiditate
-                            eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis minima
-                            soluta
-                            neque est beatae? Nobis.Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Lorem ipsum dolor sit amet consectetur.
-                        </p>
-                    </div>
-                    <div class="the-end__second">
-                        <div class="the-end__second-one">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
-                                cupiditate
-                                eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis
-                                minima
-                                soluta
-                                neque est beatae? Nobis.Nobis.Lorem ipsum dolor sit amet consectetur adipisicing.
-                            </p>
-                        </div>
-                        <div class="the-end__second-two">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
-                                cupiditate
-                                eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis
-                                minima
-                                soluta
-                                neque est beatae? Nobis.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class= "align-title-small">
-                <div onclick="showThanksToast();" class="btn btn--success btn--size-s">Like 
-                    <i class="far fa-thumbs-up"></i>
-                </div>
-                <div onclick="showSorryToast();" class="btn btn--deny btn--size-s">Dislike 
-                    <i class="far fa-thumbs-down"></i>
-                </div>
-            </div>
-        </section>
-
         <section id="contact" class="section-form">
             <div class="align-title-small">
-                <h2 class="heading-secondary">Contact</h2>
+                <h2 class="heading-secondary">Register</h2>
             </div>
             <div class="form-ctn">
                 <div class="form-left">
@@ -444,7 +332,7 @@
         <footer id="footer" class="footer">
             <div class="footer__logo-box">
                 <picture>
-                    <img src="/img/logo.png" class="footer__logo" alt="logo">
+                    <img src="/assets/img/favicon.ico" class="footer__logo" alt="logo">
                 </picture>
                 <h3 class="heading-secondary">Van Le</h3>
             </div>
@@ -469,10 +357,9 @@
 
     </main>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.js"
-        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    <script src="/js/script.js"></script>
-
+    <script src="/assets/js/jquery-3.5.1.min.js"></script>
+    <script type="module" src="/js/script.js"></script>
+    <script src="/js/toast.js"></script>
 </body>
 
 </html>
