--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <ul class="subnav">
                         <li><a href="#social">SOCIAL</a></li>
                         <li><a href="#feature">FEATURE</a></li>
+                        <li><a href="#form">REGISTER</a></li>
                         <li><a href="#contact">CONTACT</a></li>
                     </ul>
                 </li>
@@ -73,7 +74,7 @@
                         contribute to
                         the development of the company.
                     </p>
-                    <h3 class="heading-summary align-title-small">My hobbies</h3>
+                    <h3 class="heading-summary align-title-small">Favorites</h3>
                     <p class="paragraph">
                         Sherlock Holmes, BIGBANG, Lionel Messi, IU
                         <br>League of Legends, PES, travel, G-Dragon
@@ -191,7 +192,7 @@
                         <div class="feature__cta">
                             <div class="feature__price-box">
                                 <p class="feature__price-only">
-                                    Two
+                                    One
                                 </p>
                                 <p class="feature__price-value">
                                     Years
@@ -213,8 +214,8 @@
                         </h4>
                         <div class="feature__details">
                             <ul>
-                                <li>HTML5</li>
-                                <li>CSS3 SASS</li>
+                                <li>HTML</li>
+                                <li>CSS</li>
                                 <li>JavaScript</li>
                             </ul>
                         </div>
@@ -246,7 +247,7 @@
                         <div class="feature__details">
                             <ul>
                                 <li>SQL</li>
-                                <li>ReactJS</li>
+                                <li>ReactJs</li>
                                 <li>NodeJs</li>
                             </ul>
                         </div>
@@ -332,6 +333,27 @@
             </div>
         </section>
 
+        <section id="contact" class="section-contact">
+            <div class="align-title-small">
+                <h2 class="heading-secondary">Contact</h2>
+            </div>
+            <div class="contact-ctn">
+                <div class="maps-left wow">
+                    <div id="google-maps" style="width: 100%; height: 100%;"></div>
+                </div>
+                <div class="contact-right wow">
+                    <form class="contact-form">
+                        <input class="contact-control" type="text" name="Name" placeholder="Your Name">
+                        <input class="contact-control" type="text" name="Email" placeholder="Email Address">
+                        <input class="contact-control" type="text" name="Subject" placeholder="Subject">
+                        <textarea class="contact-control" name="Message" rows="6"
+                            placeholder="Enter message here.."></textarea>
+                        <button type="submit" class="btn btn-inf">Send Message</button>
+                    </form>
+                </div>
+            </div>
+        </section>
+
         <footer id="footer" class="footer">
             <div class="footer__logo-box">
                 <picture>
@@ -364,7 +386,12 @@
     <script src="/assets/js/toast.js"></script>
     <script src="/assets/vendor/wow/wow.min.js"></script>
     <script src="/assets/vendor/waypoints/jquery.waypoints.min.js"></script>
+    <script src="/assets/js/google-maps.js"></script>
     <script type="module" src="/assets/js/script.js"></script>
+    <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIA_zqjFMsJM_sxP9-6Pde5vVCTyJmUHM&callback=initMap">
+    </script>
+    </script>
 </body>
 
 </html>
