--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VanLeWebsite</title>
+    <title>VanLePage</title>
     <link rel="icon" href="assets/img/favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
@@ -48,7 +48,7 @@
             <div class="header__text-box wow animated zoomInDown">
                 <h3 class="heading-primary">
                     <span class="heading-primary--sub">Welcome</span>
-                    <span class="heading-primary--main">I'm <b class="heading-primary--color">Van</b> Le</span>
+                    <span class="heading-primary--main">I'm <b class="heading-primary--color">VAN</b> LE</span>
                 </h3>
                 <a href="https://github.com/vanlegithub/LandingPageAdvanced" target="_blank" class="btn btn--infor">
                     More information
@@ -308,7 +308,7 @@
                                 placeholder="Enter password again" type="password" class="form-control">
                             <span class="form-message"></span>
                         </div>
-                        <button onclick="showErrorToast();" class="form-submit">CREATE</button>
+                        <div onclick="showErrorToast();" class="form-submit">CREATE</div>
                     </form>
                 </div>
                 <div class="form-right">
@@ -327,7 +327,7 @@
                                 class="form-control">
                             <span class="form-message"></span>
                         </div>
-                        <button onclick="showErrorToast();" class="form-submit">SIGN IN</button>
+                        <div onclick="showErrorToast();" class="form-submit">SIGN IN</div>
                     </form>
                 </div>
             </div>
@@ -348,7 +348,7 @@
                         <input class="contact-control" type="text" name="Subject" placeholder="Subject">
                         <textarea class="contact-control" name="Message" rows="6"
                             placeholder="Enter message here.."></textarea>
-                        <button type="submit" class="btn btn-inf">Send Message</button>
+                        <div onclick="showErrorToast();" type="submit" class="btn btn--success">Send Message</div>
                     </form>
                 </div>
             </div>
@@ -376,22 +376,22 @@
                         <a href="#home" class="footer__link">Company</a>
                     </li>
                 </ul>
-                <p class="footer__copyright">Copyright &copy; by VanLe </p>
+                <p class="footer__copyright">Copyright &copy;2021 by VanLe </p>
             </div>
         </footer>
 
     </main>
 
-    <script src="/assets/js/jquery-3.5.1.min.js"></script>
+    <script src="/assets/vendor/jquery/jquery-3.5.1.min.js"></script>
     <script src="/assets/js/toast.js"></script>
+    <script src="/assets/vendor/maps/google-maps.js"></script>
     <script src="/assets/vendor/wow/wow.min.js"></script>
     <script src="/assets/vendor/waypoints/jquery.waypoints.min.js"></script>
-    <script src="/assets/js/google-maps.js"></script>
-    <script type="module" src="/assets/js/script.js"></script>
+    <script src="/assets/js/validator.js"></script>
     <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIA_zqjFMsJM_sxP9-6Pde5vVCTyJmUHM&callback=initMap">
     </script>
-    </script>
+    <script type="module" src="/assets/js/script.js"></script>
 </body>
 
 </html>
